# gnome-raw-thumbnailer

./: .gitignore  AUTHORS  ChangeLog  DEBIAN  MAINTAINERS  Makefile.am  NEWS  README  autogen.sh  configure.ac  gnome-raw-thumbnailer.doap
data/: Makefile.am  mime-functions.sh  mime-types.txt  raw-thumbnailer.xml  raw.thumbnailer.in  schemas.sh  thumbnailer.sh
debian/: changelog  control  copyright  rules
po/: POTFILES.skip
rpm/: SLED10.spec  openSUSE-10.3.spec
src/: Makefile.am  raw-thumbnailer.c
