AC_INIT(src/raw-thumbnailer.c)

AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(raw-thumbnailer, 0.99)

AM_MAINTAINER_MODE

AC_PROG_INTLTOOL([0.21])

AC_PROG_CC
AC_ISC_POSIX
AC_HEADER_STDC
AM_PROG_LIBTOOL

GNOME_COMPILE_WARNINGS

SCROLLKEEPER_REQUIRED=0.1.4

PKG_CHECK_MODULES(GSF, gnome-vfs-2.0 libgsf-gnome-1 gdk-pixbuf-2.0)
AC_SUBST(GSF_CFLAGS)
AC_SUBST(GSF_LIBS)

PKG_CHECK_MODULES(OPENRAW, libopenraw-gnome-1.0)
AC_SUBST(OPENRAW_CFLAGS)
AC_SUBST(OPENRAW_LIBS)

AC_DEFINE_UNQUOTED(GNOME_ICONDIR, "${prefix}/share/pixmaps", "definition of GNOME_ICONDIR")

ALL_LINGUAS=""

GETTEXT_PACKAGE=raw-thumbnailer
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, ["$GETTEXT_PACKAGE"], ["definition of GETTEXT_PACKAGE"])

AC_PATH_PROG(GCONFTOOL, gconftool-2)
AM_GCONF_SOURCE_2

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

AC_OUTPUT([
Makefile
data/Makefile
src/Makefile
po/Makefile.in
])
