AC_INIT(raw-thumbnailer, 3.0.0)

AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE([1.11 no-dist-gzip dist-bzip2 dist-xz])
AM_MAINTAINER_MODE
m4_ifndef([AM_SILENT_RULES], [m4_define([AM_SILENT_RULES],[])])
AM_SILENT_RULES([yes])

AC_PROG_INTLTOOL([0.21])

AC_PROG_CC
AC_ISC_POSIX
AC_HEADER_STDC
AM_PROG_LIBTOOL

GNOME_COMPILE_WARNINGS

SCROLLKEEPER_REQUIRED=0.1.4

PKG_CHECK_MODULES(GNOME, gdk-pixbuf-2.0 gio-2.0 glib-2.0)
AC_SUBST(GNOME_CFLAGS)
AC_SUBST(GNOME_LIBS)

PKG_CHECK_MODULES(OPENRAW, libopenraw-gnome-1.0 >= 0.0.9)
AC_SUBST(OPENRAW_CFLAGS)
AC_SUBST(OPENRAW_LIBS)

AC_DEFINE_UNQUOTED(GNOME_ICONDIR, "${prefix}/share/pixmaps", "definition of GNOME_ICONDIR")

ALL_LINGUAS=""

GETTEXT_PACKAGE=raw-thumbnailer
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, ["$GETTEXT_PACKAGE"], ["definition of GETTEXT_PACKAGE"])

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

AC_OUTPUT([
Makefile
data/Makefile
src/Makefile
po/Makefile.in
])
